:bug: Fix navigation on mobile

--- a/contents/css/_components.nav-main.css
+++ b/contents/css/_components.nav-main.css
@@ -4,7 +4,7 @@
   top: 57px;
   background-color: var(--c-martinique);
   display: none;
-  width: calc(100%  + 2rem);
+  width: 100%;
   z-index: 1;
   left: 0;
   padding: 1rem;
@@ -18,6 +18,7 @@
     margin-left: -1rem;
     margin-bottom: -1rem;
     border-bottom: 5px solid var(--c-black);
+    width: calc(100% + 2rem);
   }
 }
 
